Fixed GridContent not showing properly

--- a/src/index.css
+++ b/src/index.css
@@ -13,11 +13,10 @@ body {
 }
 
 .App {
-  min-height: 100vh;
+  height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: stretch;
   position: relative;
   background-color: thistle;
 }
